--- a/app/src/main/res/layout/layout_center_account_setting.xml
+++ b/app/src/main/res/layout/layout_center_account_setting.xml
@@ -1,38 +1,25 @@
-<merge xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
+
     <RelativeLayout
-
-
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="20dp"
-        android:background="@color/white">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:padding="20dp">
 
-
-        <TextView
+        <ListView
+            android:id="@+id/lvAccountSettings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textSetting"
-            android:text="Account Settings"
-            android:textSize="25dp"
-            android:textColor="#000000"
-            android:background="@drawable/grey_border_bottom"/>
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:layout_below="@+id/textSetting"
-            android:id="@+id/lvAccountSettings"
-            android:scrollbars="none">
+            android:scrollbars="none"></ListView>
 
-
-        </ListView>
+        <TextView
+            android:id="@+id/textSetting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/grey_border_bottom"
+            android:text="Account Settings"
+            android:textColor="#000000"
+            android:textSize="25dp" />
     </RelativeLayout>
-
-
-
-
-
-
-
 </merge>
