--- a/app/src/main/res/layout/activity_accountsetting.xml
+++ b/app/src/main/res/layout/activity_accountsetting.xml
@@ -2,32 +2,56 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <include layout="@layout/layout_center_viewpager"/>
+
     <RelativeLayout
+        android:id="@+id/relLayoutAccountSetting"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/relLayoutAccountSetting">
+        android:layout_height="match_parent">
+
         <RelativeLayout
+            android:id="@+id/relLayout2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/relLayout2">
-        <include layout="@layout/snippet_account_setting_toolbar"/>
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/snippet_account_setting_toolbar" />
 
         </RelativeLayout>
-         <RelativeLayout
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:id="@+id/relLayout3"
-             android:layout_below="@+id/relLayout2"
-             android:layout_marginBottom="50dp">
 
-             <include layout="@layout/layout_center_account_setting"/>
+        <RelativeLayout
+            android:id="@+id/relLayout3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/relLayout2">
 
+            <include layout="@layout/layout_center_account_setting" />
 
+        </RelativeLayout>
 
-         </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/relLayout4"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_below="@id/relLayout3"
+            android:layout_marginBottom="50dp">
 
-        <include layout="@layout/layout_bottom_navigation_view"/>
+            <TextView
+                android:id="@+id/seeAll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="10dp"
+                android:padding="5dp"
+                android:text="See complete list()"
+                android:textColor="@android:color/holo_blue_bright"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+        <include layout="@layout/layout_bottom_navigation_view" />
     </RelativeLayout>
+
+    <include layout="@layout/layout_center_viewpager" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
