--- a/app/src/main/res/layout/fragment_mainfeed_listitem.xml
+++ b/app/src/main/res/layout/fragment_mainfeed_listitem.xml
@@ -77,7 +77,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginLeft="10dp"
 
-                    android:text="3 DAYS AGO"
+                    android:text="N DAYS AGO"
                     android:textColor="@color/grey"
                     android:textSize="8dp" />
 
@@ -150,7 +150,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
-                    android:text="24"
+                    android:text="0"
                     android:textColor="@color/black"
                     android:textSize="15dp" />
 
@@ -161,7 +161,7 @@
                     android:layout_below="@+id/comment_layout"
                     android:layout_marginLeft="12dp"
                     android:layout_marginTop="5dp"
-                    android:text="23"
+                    android:text="0"
                     android:textColor="@color/black"
                     android:textSize="15dp" />
                 <RelativeLayout
@@ -192,7 +192,7 @@
                     android:layout_below="@+id/promotion"
                     android:layout_marginRight="5dp"
 
-                    android:text="23"
+                    android:text="0"
                     android:layout_alignParentRight="true"
                     android:textColor="@color/black"
                     android:textSize="15dp" />
@@ -348,7 +348,7 @@
                         android:background="@color/black"
 
                         android:padding="2dp"
-                        android:text="naman"
+                        android:text="username"
                         android:textColor="@color/white"
                         android:textSize="10sp" />
 
