--- a/app/src/main/res/layout/fragment_viewprofile.xml
+++ b/app/src/main/res/layout/fragment_viewprofile.xml
@@ -543,6 +543,7 @@
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="true"
                 android:layout_below="@+id/linearLayout2"
+                android:layout_marginTop="20dp"
 
                 android:layout_marginBottom="50dp"
                 android:background="@color/white"
