--- a/app/src/main/res/layout/layout_item_follow_fan.xml
+++ b/app/src/main/res/layout/layout_item_follow_fan.xml
@@ -52,20 +52,7 @@
         </RelativeLayout>
 
 
-            <Button
-                android:id="@+id/removeButton"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:background="@drawable/circular_button"
-                android:backgroundTint="#E5E6EB"
-                android:gravity="center"
-                android:layout_weight="2"
-                android:layout_margin="2dp"
-                android:layout_gravity="center"
-                android:text="Remove"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+
 
             <Button
                 android:layout_margin="2dp"
@@ -75,19 +62,30 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
 
-                android:layout_weight="2"
+                android:layout_weight="3"
 
                 android:background="@drawable/circular_button"
                 android:backgroundTint="@color/scheme8"
                 android:gravity="center"
                 android:text="Follow"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
 
 
 
+
     </LinearLayout>
+    <ImageView
+        android:id="@+id/removeButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_delete"
+        android:layout_weight="2"
+        android:layout_margin="2dp"
+        android:layout_gravity="right|center_vertical"
+
+        />
 
 </androidx.cardview.widget.CardView>
