--- a/app/src/main/res/layout/fragment_notification1.xml
+++ b/app/src/main/res/layout/fragment_notification1.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <TextView
@@ -14,7 +15,7 @@
         android:textColor="#F44336"
         android:paddingTop="5dp"
         android:layout_marginBottom="8dp"
-        android:paddingRight="5dp"/>
+        android:paddingRight="5dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -23,6 +24,18 @@
         android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/emptyNotification"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:alpha="0.7"
+        android:elevation="5dp"
+        android:src="@drawable/notification_bell"
+        app:civ_border_overlay="true"
+        app:civ_circle_background_color="#E5E6EB" />
 
 
 </RelativeLayout>
