--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,6 +21,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_margin="10dp"
+                android:background="@drawable/ic_whilte_eclipse"
+                app:tint="@color/black" />
+
             <!--        Top portion        -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout1"
@@ -61,28 +70,197 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <LinearLayout
+                android:id="@id/linearLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/judgeAndGp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:visibility="visible"
+                android:weightSum="100">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="ABOUT"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/display_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineHeight="20sp"
+                    android:maxLines="2" />
+
+                <TextView
+                    android:id="@+id/link1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textColor="#03A9F4"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/link2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textColor="#03A9F4"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/link3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textColor="#03A9F4"
+                    android:textSize="16sp" />
+
+                <LinearLayout
+                    android:id="@+id/share_skill_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/circular_button"
+                    android:backgroundTint="@color/white"
+                    android:elevation="5dp"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:paddingRight="15dp"
+                        android:text="Share Skill +"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/judgeAndGp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/profile_info">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/judge"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal|bottom"
+                            android:text="0"
+                            android:textColor="@android:color/holo_red_dark"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal|top"
+                            android:text="Judge"
+                            android:textAllCaps="true"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/gp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal|bottom"
+                            android:text="0"
+                            android:textColor="@color/scheme5"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal|top"
+                            android:text="Genuine Percentage"
+                            android:textAllCaps="true"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:background="#EEEEEE" />
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/domain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:fontFamily="@font/orion"
+                android:text="Domain"
+                android:textColor="@color/white"
+                android:textSize="30sp" />
+
+            <!--    Profile Links   -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="CONNECT"
                 android:layout_marginTop="20dp"
-
                 android:layout_below="@id/layout1"
                 android:textSize="14sp"
                 android:layout_centerHorizontal="true"
-
                 android:textColor="@color/black"
-                android:id="@+id/conct"/>
-            <ImageView
-                android:id="@+id/menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@drawable/ic_whilte_eclipse"
-                android:layout_alignParentRight="true"
-
-
-                app:tint="@color/black" />
+                android:id="@+id/conct" />
             <RelativeLayout
                 android:id="@+id/profileLinks"
                 android:layout_width="match_parent"
@@ -159,16 +337,6 @@
                 </LinearLayout>
 
             </RelativeLayout>
-
-            <!--            <View-->
-            <!--                android:id="@+id/line1"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="3dp"-->
-            <!--                android:layout_below="@id/profileLinks"-->
-            <!--                android:layout_alignParentStart="true"-->
-            <!--                android:layout_alignParentEnd="true"-->
-            <!--                android:layout_margin="15dp"-->
-            <!--                android:background="@color/white" />-->
 
             <RelativeLayout
                 android:id="@+id/profile_info"
@@ -423,8 +591,7 @@
                                 android:text="Rank"
                                 android:textAllCaps="true"
                                 android:textColor="@color/black"
-                                android:textSize="15sp"
-                                />
+                                android:textSize="15sp" />
 
                         </LinearLayout>
 
@@ -434,94 +601,33 @@
 
             </RelativeLayout>
 
-            <!--        About               -->
-            <LinearLayout
-                android:id="@id/linearLayout2"
-                android:layout_width="match_parent"
+            <!--    Judge GPs   -->
+            <TextView
+                android:id="@+id/noPost"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/profile_info"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_below="@+id/linearLayout2"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="70dp"
+                android:gravity="center"
+                android:text="NO POST SHARED"
+                android:textSize="18sp"
+                android:visibility="gone" />
+
+            <!--        About               -->
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/domain"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:orientation="vertical"
-                android:visibility="visible"
-                android:weightSum="100">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="ABOUT"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/display_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lineHeight="20sp"
-                    android:maxLines="2" />
-
-                <TextView
-                    android:id="@+id/link1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textColor="#03A9F4"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/link2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textColor="#03A9F4"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/link3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textColor="#03A9F4"
-                    android:textSize="16sp" />
-
-                <LinearLayout
-                    android:id="@+id/share_skill_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/circular_button"
-                    android:backgroundTint="@color/white"
-                    android:elevation="5dp"
-                    android:orientation="horizontal"
-                    android:padding="5dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:paddingRight="15dp"
-                        android:text="Share Skill +"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-
-
-                </LinearLayout>
-
-
-            </LinearLayout>
+                android:text="Username"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
             <!--        Image Grid          -->
             <androidx.recyclerview.widget.RecyclerView
@@ -540,51 +646,8 @@
                 app:spanCount="3">
 
             </androidx.recyclerview.widget.RecyclerView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="NO POST SHARED"
-                android:layout_marginBottom="70dp"
-                android:layout_marginTop="20dp"
 
-                android:id="@+id/noPost"
-                android:visibility="gone"
-                android:layout_below="@+id/linearLayout2"
-
-                android:gravity="center"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:id="@+id/username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/domain"
-                android:text="Username"
-                android:textColor="@color/black"
-
-                android:textSize="18sp"
-                android:layout_centerHorizontal="true"
-                />
-
-            <TextView
-                android:id="@+id/domain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/orion"
-                android:text="Domain"
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                android:layout_centerHorizontal="true"
-                />
         </RelativeLayout>
-</ScrollView>
-
+    </ScrollView>
     <include layout="@layout/layout_bottom_navigation_view" />
-
-
 </RelativeLayout>
